src/objects/AccountRanking__c.object
<CustomObject>
    <description>SFDC1-7592 Lift &amp; Shift from Legacy Markit</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>SFDC1-7592 Lookup to the account that this ranking is related</description>
        <inlineHelpText>Lookup to the account that this ranking is related</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Rankings</relationshipLabel>
        <relationshipName>AccountRankings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <description>SFDC1-7592 Criteria of the Value</description>
        <label>Criteria</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assets</fullName>
                </value>
                <value>
                    <fullName>Assets on Balance Sheet</fullName>
                </value>
                <value>
                    <fullName>AUM</fullName>
                </value>
                <value>
                    <fullName>Equity Assets</fullName>
                </value>
                <value>
                    <fullName>Equity Trades</fullName>
                </value>
                <value>
                    <fullName>Wilshire Index</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LegacyIDUnique__c</fullName>
        <description>SFDC1-7592 concat of system and ID with @ separator</description>
        <externalId>true</externalId>
        <label>LegacyID Unique</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>SFDC1-7592 System ID from migrated records, will be on Markit records only</description>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacySystem__c</fullName>
        <description>SFDC1-7592 Legacy System tells which system the record was migrated from</description>
        <label>Legacy System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LegacySystem</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MetricsKey__c</fullName>
        <description>SFDC1-7592 concatenation of Rank Country and Criteria value</description>
        <formula>TEXT(RankCountry__c) &amp; TEXT(Criteria__c)</formula>
        <label>Metrics Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDAccountRanking__c</fullName>
        <description>SFDC1-7592 PK field for Data Migration Support</description>
        <displayFormat>AR{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID AccountRanking</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>RankCountry__c</fullName>
        <defaultValue>&apos;Global&apos;</defaultValue>
        <description>SFDC1-7592 Rank Country picklist values</description>
        <label>Rank Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountriesPicklist</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <description>SFDC1-7592 Read-only as this is a calculated field, should be triggered on record add or edit.</description>
        <inlineHelpText>Read-only calculated field</inlineHelpText>
        <label>Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>SFDC1-7592 Source of where the value was received</description>
        <inlineHelpText>Source of where the value was received</inlineHelpText>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reuters</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Data.com</fullName>
                </value>
                <value>
                    <fullName>BigDough</fullName>
                </value>
                <value>
                    <fullName>Investor Relations</fullName>
                </value>
                <value>
                    <fullName>PREQIN</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ValueAsOf__c</fullName>
        <description>SFDC1-7592 Value to be considered in ranking</description>
        <inlineHelpText>Value to be considered in ranking</inlineHelpText>
        <label>Value as of</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>SFDC1-7592 Account Ranking Value</description>
        <inlineHelpText>Account Ranking Value</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Account Ranking</label>
    <nameField>
        <displayFormat>AR-{000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Rankings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>